Name:                snap-auth
Version:             0.0.4
Synopsis:            An authentication system for Snap
Author:              Doug Beardsley, Ozgun Ataman
Stability:           Experimental
Category:            Web
Build-type:          Simple

Cabal-Version:       >= 1.6

Library
    hs-source-dirs:
        src
    exposed-modules:
        Snap.Auth
        Snap.Auth.Handlers
    other-modules:
        Snap.Auth.Password

    Build-Depends: 
        Crypto >= 4.2.0,
        base >= 4 && <5,
        bytestring,
        containers >= 0.3,
        haskell98,
        monads-fd >= 0.1 && <0.2,
        old-locale,
        snap-core >= 0.3 && < 0.3.1,
        syb,
        time

    ghc-options: -Wall -funbox-strict-fields -O2 -fvia-C -optc-O3 -funfolding-use-threshold=16

    extensions:
        OverloadedStrings
      , DeriveDataTypeable
      , GeneralizedNewtypeDeriving
