Name:                snap-auth
Version:             0.1.1.2
Synopsis:            An authentication/session management system for Snap
Author:              Doug Beardsley, Ozgun Ataman
Stability:           Experimental
Category:            Web
Build-type:          Simple

Cabal-Version:       >= 1.6

Library
    hs-source-dirs:
        src
    exposed-modules:
        Snap.Auth
        Snap.Auth.Handlers
        Snap.Extension.Session.CookieSession
        Snap.Extension.Session.Helpers
    other-modules:
        Snap.Auth.Password
        Snap.Extension.Session
        Snap.Extension.Session.Common
        Snap.Extension.Session.SecureCookie
        Snap.Extension.Session.Types

    Build-Depends: 
        Crypto >= 4.2.0,
        base >= 4 && < 5,
        bytestring >= 0.9,
        cereal >= 0.3,
        clientsession >= 0.4.1 && < 0.5,
        containers >= 0.3,
        haskell98,
        heist >= 0.5.1,
        mtl >= 2 && < 3,
        xmlhtml >= 0.1.3,
        old-locale,
        snap-core >= 0.4 && < 0.5,
        snap >= 0.4 && < 0.5,
        syb,
        time,
        text >= 0.11,
        transformers >= 0.2.2

    ghc-options: -Wall -funbox-strict-fields -O2 -optc-O3 -funfolding-use-threshold=16

    extensions:
        OverloadedStrings
      , MultiParamTypeClasses
      , FunctionalDependencies
      , DeriveDataTypeable
